--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 @import "tailwindcss";
 @plugin "tailwindcss-animate";
 
@@ -40,9 +40,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-  --font-sans: Montserrat, sans-serif;
-  --font-mono: Source Code Pro, monospace;
-  --font-serif: Merriweather, serif;
+  --font-sans: Delius;
+  --font-mono: monospace;
+  --font-serif: serif;
   --radius: 0.5rem;
   --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
   --tracking-tight: calc(var(--tracking-normal) - 0.025em);
@@ -71,113 +71,113 @@
 
 :root {
   --radius: 0.5rem;
-  --background: oklch(0.9711 0.0074 80.7211);
-  --foreground: oklch(0.3000 0.0358 30.2042);
-  --card: oklch(0.9711 0.0074 80.7211);
-  --card-foreground: oklch(0.3000 0.0358 30.2042);
-  --popover: oklch(0.9711 0.0074 80.7211);
-  --popover-foreground: oklch(0.3000 0.0358 30.2042);
-  --primary: oklch(0.5234 0.1347 144.1672);
+  --background: oklch(0.8890 0.0389 262.9192);
+  --foreground: oklch(0.3220 0.0319 267.2063);
+  --card: oklch(0.9339 0.0213 268.4282);
+  --card-foreground: oklch(0.3220 0.0319 267.2063);
+  --popover: oklch(0.9339 0.0213 268.4282);
+  --popover-foreground: oklch(0.3220 0.0319 267.2063);
+  --primary: oklch(0.4730 0.2054 299.6368);
   --primary-foreground: oklch(1.0000 0 0);
-  --secondary: oklch(0.9571 0.0210 147.6360);
-  --secondary-foreground: oklch(0.4254 0.1159 144.3078);
-  --muted: oklch(0.9370 0.0142 74.4218);
-  --muted-foreground: oklch(0.4495 0.0486 39.2110);
-  --accent: oklch(0.8952 0.0504 146.0366);
-  --accent-foreground: oklch(0.4254 0.1159 144.3078);
-  --destructive: oklch(0.5386 0.1937 26.7249);
-  --border: oklch(0.8805 0.0208 74.6428);
-  --input: oklch(0.8805 0.0208 74.6428);
-  --ring: oklch(0.5234 0.1347 144.1672);
-  --chart-1: oklch(0.6731 0.1624 144.2083);
-  --chart-2: oklch(0.5752 0.1446 144.1813);
-  --chart-3: oklch(0.5234 0.1347 144.1672);
-  --chart-4: oklch(0.4254 0.1159 144.3078);
-  --chart-5: oklch(0.2157 0.0453 145.7256);
-  --sidebar: oklch(0.9370 0.0142 74.4218);
-  --sidebar-foreground: oklch(0.3000 0.0358 30.2042);
-  --sidebar-primary: oklch(0.5234 0.1347 144.1672);
+  --secondary: oklch(0.4994 0.2840 274.8755);
+  --secondary-foreground: oklch(1.0000 0 0);
+  --muted: oklch(0.9339 0.0213 268.4282);
+  --muted-foreground: oklch(0.5812 0.0499 268.3020);
+  --accent: oklch(0.9022 0.0353 271.5586);
+  --accent-foreground: oklch(0.3220 0.0319 267.2063);
+  --destructive: oklch(0.6137 0.2039 25.5645);
+  --border: oklch(0.8263 0.0476 266.6432);
+  --input: oklch(0.8263 0.0476 266.6432);
+  --ring: oklch(0.7045 0.0760 266.4820);
+  --chart-1: oklch(0.7045 0.0760 266.4820);
+  --chart-2: oklch(0.7818 0.0579 265.1304);
+  --chart-3: oklch(0.8579 0.0410 262.2758);
+  --chart-4: oklch(0.7670 0.0595 262.2426);
+  --chart-5: oklch(0.6433 0.0925 268.0937);
+  --sidebar: oklch(0.9339 0.0213 268.4282);
+  --sidebar-foreground: oklch(0.3220 0.0319 267.2063);
+  --sidebar-primary: oklch(0.7045 0.0760 266.4820);
   --sidebar-primary-foreground: oklch(1.0000 0 0);
-  --sidebar-accent: oklch(0.8952 0.0504 146.0366);
-  --sidebar-accent-foreground: oklch(0.4254 0.1159 144.3078);
-  --sidebar-border: oklch(0.8805 0.0208 74.6428);
-  --sidebar-ring: oklch(0.5234 0.1347 144.1672);
+  --sidebar-accent: oklch(0.9022 0.0353 271.5586);
+  --sidebar-accent-foreground: oklch(0.3220 0.0319 267.2063);
+  --sidebar-border: oklch(0.8263 0.0476 266.6432);
+  --sidebar-ring: oklch(0.7045 0.0760 266.4820);
   --destructive-foreground: oklch(1.0000 0 0);
-  --font-sans: Montserrat, sans-serif;
-  --font-serif: Merriweather, serif;
-  --font-mono: Source Code Pro, monospace;
-  --shadow-color: oklch(0 0 0);
+  --font-sans: Delius;
+  --font-serif: serif;
+  --font-mono: monospace;
+  --shadow-color: #8A9FD0;
   --shadow-opacity: 0.1;
-  --shadow-blur: 3px;
+  --shadow-blur: 8px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 0;
-  --shadow-offset-y: 1px;
-  --letter-spacing: 0em;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0rem;
   --spacing: 0.25rem;
-  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
-  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
-  --tracking-normal: 0em;
+  --shadow-2xs: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.05);
+  --shadow-xs: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.05);
+  --shadow-sm: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.10), 0px 1px 2px -1px hsl(222.0000 42.6829% 67.8431% / 0.10);
+  --shadow: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.10), 0px 1px 2px -1px hsl(222.0000 42.6829% 67.8431% / 0.10);
+  --shadow-md: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.10), 0px 2px 4px -1px hsl(222.0000 42.6829% 67.8431% / 0.10);
+  --shadow-lg: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.10), 0px 4px 6px -1px hsl(222.0000 42.6829% 67.8431% / 0.10);
+  --shadow-xl: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.10), 0px 8px 10px -1px hsl(222.0000 42.6829% 67.8431% / 0.10);
+  --shadow-2xl: 0px 4px 8px 0px hsl(222.0000 42.6829% 67.8431% / 0.25);
+  --tracking-normal: 0rem;
 }
 
 .dark {
-  --background: oklch(0.2683 0.0279 150.7681);
-  --foreground: oklch(0.9423 0.0097 72.6595);
-  --card: oklch(0.3327 0.0271 146.9867);
-  --card-foreground: oklch(0.9423 0.0097 72.6595);
-  --popover: oklch(0.3327 0.0271 146.9867);
-  --popover-foreground: oklch(0.9423 0.0097 72.6595);
-  --primary: oklch(0.6731 0.1624 144.2083);
-  --primary-foreground: oklch(0.2157 0.0453 145.7256);
-  --secondary: oklch(0.3942 0.0265 142.9926);
-  --secondary-foreground: oklch(0.8970 0.0166 142.5518);
-  --muted: oklch(0.3327 0.0271 146.9867);
-  --muted-foreground: oklch(0.8579 0.0174 76.0955);
-  --accent: oklch(0.5752 0.1446 144.1813);
-  --accent-foreground: oklch(0.9423 0.0097 72.6595);
-  --destructive: oklch(0.5386 0.1937 26.7249);
-  --border: oklch(0.3942 0.0265 142.9926);
-  --input: oklch(0.3942 0.0265 142.9926);
-  --ring: oklch(0.6731 0.1624 144.2083);
-  --chart-1: oklch(0.7660 0.1179 145.2950);
-  --chart-2: oklch(0.7185 0.1417 144.8887);
-  --chart-3: oklch(0.6731 0.1624 144.2083);
-  --chart-4: oklch(0.6291 0.1543 144.2031);
-  --chart-5: oklch(0.5752 0.1446 144.1813);
-  --sidebar: oklch(0.2683 0.0279 150.7681);
-  --sidebar-foreground: oklch(0.9423 0.0097 72.6595);
-  --sidebar-primary: oklch(0.6731 0.1624 144.2083);
-  --sidebar-primary-foreground: oklch(0.2157 0.0453 145.7256);
-  --sidebar-accent: oklch(0.5752 0.1446 144.1813);
-  --sidebar-accent-foreground: oklch(0.9423 0.0097 72.6595);
-  --sidebar-border: oklch(0.3942 0.0265 142.9926);
-  --sidebar-ring: oklch(0.6731 0.1624 144.2083);
-  --destructive-foreground: oklch(0.9423 0.0097 72.6595);
+  --background: oklch(0.2339 0.0255 274.2160);
+  --foreground: oklch(0.9339 0.0213 268.4282);
+  --card: oklch(0.2819 0.0355 274.7479);
+  --card-foreground: oklch(0.9339 0.0213 268.4282);
+  --popover: oklch(0.2819 0.0355 274.7479);
+  --popover-foreground: oklch(0.9339 0.0213 268.4282);
+  --primary: oklch(0.7045 0.0760 266.4820);
+  --primary-foreground: oklch(0.2339 0.0255 274.2160);
+  --secondary: oklch(0.3819 0.0505 273.3708);
+  --secondary-foreground: oklch(0.9339 0.0213 268.4282);
+  --muted: oklch(0.3819 0.0505 273.3708);
+  --muted-foreground: oklch(0.7818 0.0579 265.1304);
+  --accent: oklch(0.4568 0.0619 272.1542);
+  --accent-foreground: oklch(0.9339 0.0213 268.4282);
+  --destructive: oklch(0.6137 0.2039 25.5645);
+  --border: oklch(0.3819 0.0505 273.3708);
+  --input: oklch(0.3819 0.0505 273.3708);
+  --ring: oklch(0.7045 0.0760 266.4820);
+  --chart-1: oklch(0.7045 0.0760 266.4820);
+  --chart-2: oklch(0.7818 0.0579 265.1304);
+  --chart-3: oklch(0.8579 0.0410 262.2758);
+  --chart-4: oklch(0.7670 0.0595 262.2426);
+  --chart-5: oklch(0.6433 0.0925 268.0937);
+  --sidebar: oklch(0.2819 0.0355 274.7479);
+  --sidebar-foreground: oklch(0.9339 0.0213 268.4282);
+  --sidebar-primary: oklch(0.7045 0.0760 266.4820);
+  --sidebar-primary-foreground: oklch(0.2339 0.0255 274.2160);
+  --sidebar-accent: oklch(0.4568 0.0619 272.1542);
+  --sidebar-accent-foreground: oklch(0.9339 0.0213 268.4282);
+  --sidebar-border: oklch(0.3819 0.0505 273.3708);
+  --sidebar-ring: oklch(0.7045 0.0760 266.4820);
+  --destructive-foreground: oklch(1.0000 0 0);
   --radius: 0.5rem;
-  --font-sans: Montserrat, sans-serif;
-  --font-serif: Merriweather, serif;
-  --font-mono: Source Code Pro, monospace;
-  --shadow-color: oklch(0 0 0);
-  --shadow-opacity: 0.1;
-  --shadow-blur: 3px;
+  --font-sans: Delius;
+  --font-serif: serif;
+  --font-mono: monospace;
+  --shadow-color: #000000;
+  --shadow-opacity: 0.2;
+  --shadow-blur: 8px;
   --shadow-spread: 0px;
-  --shadow-offset-x: 0;
-  --shadow-offset-y: 1px;
-  --letter-spacing: 0em;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 4px;
+  --letter-spacing: 0rem;
   --spacing: 0.25rem;
-  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
-  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --shadow-2xs: 0px 4px 8px 0px hsl(0 0% 0% / 0.10);
+  --shadow-xs: 0px 4px 8px 0px hsl(0 0% 0% / 0.10);
+  --shadow-sm: 0px 4px 8px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow: 0px 4px 8px 0px hsl(0 0% 0% / 0.20), 0px 1px 2px -1px hsl(0 0% 0% / 0.20);
+  --shadow-md: 0px 4px 8px 0px hsl(0 0% 0% / 0.20), 0px 2px 4px -1px hsl(0 0% 0% / 0.20);
+  --shadow-lg: 0px 4px 8px 0px hsl(0 0% 0% / 0.20), 0px 4px 6px -1px hsl(0 0% 0% / 0.20);
+  --shadow-xl: 0px 4px 8px 0px hsl(0 0% 0% / 0.20), 0px 8px 10px -1px hsl(0 0% 0% / 0.20);
+  --shadow-2xl: 0px 4px 8px 0px hsl(0 0% 0% / 0.50);
 }
 
 @layer base {
